# HyperCatalog

./: .gitignore  CLAUDE.md  README.md
.claude/skills/code-review/: SKILL.md
.claude/skills/commit-and-push/: SKILL.md
.claude/skills/docs-engineering/: SKILL.md
.claude/skills/release-engineering/: SKILL.md
app/: build.gradle.kts
app/src/androidTest/java/org/ghostsinthelab/app/hypercatalog/: ExampleInstrumentedTest.kt  HyperStackBridgeTest.kt  NativeRenderInstrumentedTest.kt  StackPrefsInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: gestures.json  gestures.yaml  layout_demo.yaml  productivity.json  productivity.yaml  sample.json  sample.yaml
app/src/main/java/org/ghostsinthelab/app/hypercatalog/: CardTransform.kt  CardView.kt  HostEffects.kt  HostLogic.kt  MainActivity.kt  NativeBridge.kt  NativeCardScreen.kt  StackPrefs.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/org/ghostsinthelab/app/hypercatalog/: CardTransformTest.kt  ExampleUnitTest.kt  HostLogicTest.kt
doc/: roadmap.md
doc/adr/: 0001-rust-native-hypertalk.md  0002-json-string-jni-bridge.md  0003-player-first-json-authored-stacks.md  0004-in-app-script-editor.md  0005-object-authoring.md  0006-geometry-properties.md  0007-text-styling.md  0008-native-view-rendering.md  0009-touchscreen-gestures.md  0010-modern-ui-considerations.md  0011-yaml-stack-files.md  0012-uniffi-bridge.md  0013-persistence-layering.md  0014-layout-model-group-containers.md  0015-switch-object-kind.md  0016-grid-layout-and-card-layout-scripting.md  0017-free-absolute-layout-mode.md  0018-material-roles-and-theme.md  0019-lifecycle-messages.md  0020-safe-area-insets-and-constraints.md  0021-component-palette.md  0022-accessibility-and-seeded-theme.md  0023-platform-escape-hatches.md  0024-typed-message-args-and-async-foundation.md  0025-async-platform-facilities.md  0026-remote-images-coil.md
doc/design/: android-hypertalk-dialect.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
rust/: Cargo.toml  README.md  rust-toolchain.toml
rust/.cargo/: config.toml
rust/hyper-desktop/: Cargo.toml
rust/hyper-desktop/src/: main.rs
rust/hypercore/: Cargo.toml
rust/hypercore/src/: lib.rs  model.rs  session.rs  tests.rs
rust/hypercore/src/script/: ast.rs  interp.rs  lexer.rs  mod.rs  parser.rs  value.rs
rust/hyperffi/: Cargo.toml
rust/hyperffi/src/: android.rs  bridge.rs  lib.rs
