[workspace]
resolver = "2"
members = ["hypercore", "hyperffi", "hyper-desktop"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["HyperCatalog"]

[workspace.dependencies]
hypercore = { path = "hypercore" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Smaller, faster release artifacts for the Android .so
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
