[package]
name = "hyper-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Headless desktop harness to exercise hypercore without an emulator"

[[bin]]
name = "hyper-desktop"
path = "src/main.rs"

[dependencies]
hypercore = { workspace = true }
