[package]
name = "hypercore"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Platform-agnostic HyperCard-like document model and HyperTalk interpreter"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
yaml_serde = "0.10.4"
