[package]
name = "hyperffi"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "JNI bridge exposing hypercore to Android"

[lib]
name = "hyperffi"
crate-type = ["cdylib"]

[dependencies]
hypercore = { workspace = true }
serde_json = { workspace = true }
uniffi = { version = "0.31.1", features = ["cli"] }

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
