[package]
name = "hyperffi"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "UniFFI bridge exposing hypercore to host languages (Android/Kotlin)"

[lib]
name = "hyperffi"
crate-type = ["cdylib"]

[dependencies]
hypercore = { workspace = true }
uniffi = { version = "0.31.1", features = ["cli"] }
